Fix icon image alignment in online docs
git-svn-id: svn+ssh://entropy.me.uk/var/svn/timothy/sixornot/trunk@749 741c516a-3ba6-4fa8-b112-5c51f26a88df

--- a/web/style.css
+++ b/web/style.css
@@ -86,6 +86,7 @@ ul.icon_list li
     margin: 0.5em 0;
     padding-left: 60px;
     vertical-align: middle;
+    min-height: 24px;
 }
 
 li.i_other
